[package]
name = "checked-float"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
repository = "https://github.com/dragazo/checked-float"
documentation = "https://docs.rs/checked-float"
description = "A crate for making invariant-enforcing floating point wrappers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
